packages/java/src/main/resources/natives/macos-arm64/include/xberg.h


typedef struct XBERGDiffOptions XBERGDiffOptions;
typedef struct XBERGHeuristicsConfig XBERGHeuristicsConfig;
typedef struct XBERGImagePreprocessingConfig XBERGImagePreprocessingConfig;
typedef struct XBERGKeywordConfig XBERGKeywordConfig;
typedef struct XBERGMetaSchema XBERGMetaSchema;
typedef struct XBERGMetadata XBERGMetadata;
typedef struct XBERGMultidocThresholds XBERGMultidocThresholds;
typedef struct XBERGPaddleOcrConfig XBERGPaddleOcrConfig;
typedef struct XBERGPageRange XBERGPageRange;
typedef struct XBERGPageSignals XBERGPageSignals;
typedef struct XBERGPreset XBERGPreset;
typedef struct XBERGRakeParams XBERGRakeParams;
typedef struct XBERGRegistry XBERGRegistry;
typedef struct XBERGTesseractConfig XBERGTesseractConfig;
typedef struct XBERGYakeParams XBERGYakeParams;
typedef struct XBERGXbergOcrBackendVTable {
  int32_t (*name_fn)(const void *user_data,
                     char **out_name,
                     char **out_error);
  int32_t (*version_fn)(const void *user_data,
                        char **out_version,
                        char **out_error);
  int32_t (*initialize_fn)(const void *user_data,
                           char **out_error);
  int32_t (*shutdown_fn)(const void *user_data,
                         char **out_error);
  int32_t (*process_image)(const void *user_data,
                           const uint8_t *image_bytes,
                           uintptr_t image_bytes_len,
                           const char *config,
                           char **out_result,
                           char **out_error);
  int32_t (*process_image_file)(const void *user_data,
                                const char *path,
                                const char *config,
                                char **out_result,
                                char **out_error);
  int32_t (*supports_language)(const void *user_data,
                               const char *lang);
  int32_t (*backend_type)(const void *user_data,
                          char **out_result,
                          char **out_error);
  int32_t (*supported_languages)(const void *user_data,
                                 char **out_result,
                                 char **out_error);
  int32_t (*supports_table_detection)(const void *user_data);
  int32_t (*supports_document_processing)(const void *user_data);
  int32_t (*emits_structured_markdown)(const void *user_data);
  int32_t (*process_document)(const void *user_data,
                              const char *_path,
                              const char *_config,
                              char **out_result,
                              char **out_error);
  void (*free_string)(char*);
  void (*free_user_data)(void*);
} XBERGXbergOcrBackendVTable;
typedef struct XBERGXbergPostProcessorVTable {
  int32_t (*name_fn)(const void *user_data,
                     char **out_name,
                     char **out_error);
  int32_t (*version_fn)(const void *user_data,
                        char **out_version,
                        char **out_error);
  int32_t (*initialize_fn)(const void *user_data,
                           char **out_error);
  int32_t (*shutdown_fn)(const void *user_data,
                         char **out_error);
  int32_t (*process)(const void *user_data,
                     const char *result,
                     const char *config,
                     char **out_error);
  int32_t (*processing_stage)(const void *user_data,
                              char **out_result,
                              char **out_error);
  int32_t (*should_process)(const void *user_data,
                            const char *_result,
                            const char *_config);
  uint64_t (*estimated_duration_ms)(const void *user_data,
                                    const char *_result);
  int32_t (*priority)(const void *user_data);
  void (*free_string)(char*);
  void (*free_user_data)(void*);
} XBERGXbergPostProcessorVTable;
typedef struct XBERGXbergValidatorVTable {
  int32_t (*name_fn)(const void *user_data,
                     char **out_name,
                     char **out_error);
  int32_t (*version_fn)(const void *user_data,
                        char **out_version,
                        char **out_error);
  int32_t (*initialize_fn)(const void *user_data,
                           char **out_error);
  int32_t (*shutdown_fn)(const void *user_data,
                         char **out_error);
  int32_t (*validate)(const void *user_data,
                      const char *result,
                      const char *config,
                      char **out_error);
  int32_t (*should_validate)(const void *user_data,
                             const char *_result,
                             const char *_config);
  int32_t (*priority)(const void *user_data);
  void (*free_string)(char*);
  void (*free_user_data)(void*);
} XBERGXbergValidatorVTable;
typedef struct XBERGXbergEmbeddingBackendVTable {
  int32_t (*name_fn)(const void *user_data,
                     char **out_name,
                     char **out_error);
  int32_t (*version_fn)(const void *user_data,
                        char **out_version,
                        char **out_error);
  int32_t (*initialize_fn)(const void *user_data,
                           char **out_error);
  int32_t (*shutdown_fn)(const void *user_data,
                         char **out_error);
  uintptr_t (*dimensions)(const void *user_data);
  int32_t (*embed)(const void *user_data,
                   const char *texts,
                   char **out_result,
                   char **out_error);
  void (*free_string)(char*);
  void (*free_user_data)(void*);
} XBERGXbergEmbeddingBackendVTable;
int32_t xberg_last_error_code(void);
const char *xberg_last_error_context(void);
void xberg_free_string(char *ptr);
void xberg_free_bytes(uint8_t *ptr,
                      uintptr_t len,
                      uintptr_t cap);
XBERGImagePreprocessingConfig *xberg_image_preprocessing_config_default(void);
XBERGTesseractConfig *xberg_tesseract_config_default(void);
int32_t xberg_metadata_is_empty(const XBERGMetadata *this_);
XBERGDiffOptions *xberg_diff_options_default(void);
XBERGYakeParams *xberg_yake_params_default(void);
XBERGRakeParams *xberg_rake_params_default(void);
XBERGKeywordConfig *xberg_keyword_config_default(void);
XBERGHeuristicsConfig *xberg_heuristics_config_default(void);
int32_t xberg_heuristics_config_validate(const XBERGHeuristicsConfig *this_);
uint32_t xberg_page_range_page_count(const XBERGPageRange *this_);
XBERGPageSignals *xberg_page_signals_from_page_text(uint32_t page_number,
                                                    const char *text,
                                                    float layout_text_density);
XBERGMultidocThresholds *xberg_multidoc_thresholds_default(void);
XBERGMetaSchema *xberg_meta_schema_compile(const char *meta_schema_json);
XBERGPreset *xberg_meta_schema_parse_preset(const XBERGMetaSchema *this_,
                                            const char *path,
                                            const uint8_t *raw,
                                            uintptr_t raw_len);
XBERGRegistry *xberg_registry_load_embedded(void);
XBERGPreset *xberg_registry_get(const XBERGRegistry *this_,
                                const char *id);
char *xberg_registry_summaries(const XBERGRegistry *this_);
uintptr_t xberg_registry_len(const XBERGRegistry *this_);
int32_t xberg_registry_is_empty(const XBERGRegistry *this_);
uint8_t *xberg_registry_sample_bytes(const XBERGRegistry *this_,
                                     const char *preset_id,
                                     const char *name);
uintptr_t xberg_registry_extend_from_dir(XBERGRegistry *this_,
                                         const char *dir);
XBERGPaddleOcrConfig *xberg_paddle_ocr_config_with_cache_dir(XBERGPaddleOcrConfig *this_,
                                                             const char *path);
XBERGPaddleOcrConfig *xberg_paddle_ocr_config_with_table_detection(XBERGPaddleOcrConfig *this_,
                                                                   int32_t enable);
XBERGPaddleOcrConfig *xberg_paddle_ocr_config_with_angle_cls(XBERGPaddleOcrConfig *this_,
                                                             int32_t enable);
XBERGPaddleOcrConfig *xberg_paddle_ocr_config_with_det_db_thresh(XBERGPaddleOcrConfig *this_,
                                                                 float threshold);
XBERGPaddleOcrConfig *xberg_paddle_ocr_config_with_det_db_box_thresh(XBERGPaddleOcrConfig *this_,
                                                                     float threshold);
XBERGPaddleOcrConfig *xberg_paddle_ocr_config_with_det_db_unclip_ratio(XBERGPaddleOcrConfig *this_,
                                                                       float ratio);
XBERGPaddleOcrConfig *xberg_paddle_ocr_config_with_det_limit_side_len(XBERGPaddleOcrConfig *this_,
                                                                      uint32_t length);
XBERGPaddleOcrConfig *xberg_paddle_ocr_config_with_rec_batch_num(XBERGPaddleOcrConfig *this_,
                                                                 uint32_t batch_size);
XBERGPaddleOcrConfig *xberg_paddle_ocr_config_with_drop_score(XBERGPaddleOcrConfig *this_,
                                                              float score);
XBERGPaddleOcrConfig *xberg_paddle_ocr_config_with_padding(XBERGPaddleOcrConfig *this_,
                                                           uint32_t padding);
XBERGPaddleOcrConfig *xberg_paddle_ocr_config_with_model_tier(XBERGPaddleOcrConfig *this_,
                                                              const char *tier);
XBERGPaddleOcrConfig *xberg_paddle_ocr_config_default(void);
int32_t xberg_register_ocr_backend(const char *name,
                                   const struct XBERGXbergOcrBackendVTable *vtable,
                                   const void *user_data,
                                   char **out_error);
int32_t xberg_unregister_ocr_backend(const char *name,
                                     char **out_error);
int32_t xberg_clear_ocr_backend(char **out_error);
int32_t xberg_register_post_processor(const char *name,
                                      const struct XBERGXbergPostProcessorVTable *vtable,
                                      const void *user_data,
                                      char **out_error);
int32_t xberg_unregister_post_processor(const char *name,
                                        char **out_error);
int32_t xberg_clear_post_processor(char **out_error);
int32_t xberg_register_validator(const char *name,
                                 const struct XBERGXbergValidatorVTable *vtable,
                                 const void *user_data,
                                 char **out_error);
int32_t xberg_unregister_validator(const char *name,
                                   char **out_error);
int32_t xberg_clear_validator(char **out_error);
int32_t xberg_register_embedding_backend(const char *name,
                                         const struct XBERGXbergEmbeddingBackendVTable *vtable,
                                         const void *user_data,
                                         char **out_error);
int32_t xberg_unregister_embedding_backend(const char *name,
                                           char **out_error);