packages/csharp/src/Xberg/NativeMethods.cs


    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_image_preprocessing_config_default")]
    internal static extern IntPtr ImagePreprocessingConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_tesseract_config_default")]
    internal static extern IntPtr TesseractConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_metadata_is_empty")]
    internal static extern int MetadataIsEmpty(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_diff_options_default")]
    internal static extern IntPtr DiffOptionsDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_yake_params_default")]
    internal static extern IntPtr YakeParamsDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_rake_params_default")]
    internal static extern IntPtr RakeParamsDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_keyword_config_default")]
    internal static extern IntPtr KeywordConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_confidence_signals_from_extraction_result")]
    internal static extern IntPtr ConfidenceSignalsFromExtractionResult(
        IntPtr result,
        IntPtr schemaCompliance,
        float textCoverage
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_confidence_weights_default")]
    internal static extern IntPtr ConfidenceWeightsDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_confidence_weights_is_normalized")]
    internal static extern int ConfidenceWeightsIsNormalized(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_heuristics_config_default")]
    internal static extern IntPtr HeuristicsConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_heuristics_config_validate")]
    internal static extern void HeuristicsConfigValidate(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_chunk_plan_default")]
    internal static extern IntPtr ChunkPlanDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_chunk_plan_total_pages")]
    internal static extern uint ChunkPlanTotalPages(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_page_range_page_count")]
    internal static extern uint PageRangePageCount(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_page_signals_from_page_text")]
    internal static extern IntPtr PageSignalsFromPageText(
        uint pageNumber,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string text,
        float layoutTextDensity
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_multidoc_thresholds_default")]
    internal static extern IntPtr MultidocThresholdsDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_structured_thresholds_default")]
    internal static extern IntPtr StructuredThresholdsDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_meta_schema_compile")]
    internal static extern IntPtr MetaSchemaCompile(
        [MarshalAs(UnmanagedType.LPUTF8Str)] string metaSchemaJson
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_meta_schema_parse_preset")]
    internal static extern IntPtr MetaSchemaParsePreset(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string path,
        IntPtr raw,
        UIntPtr rawLen
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_registry_load_embedded")]
    internal static extern IntPtr RegistryLoadEmbedded();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_registry_get")]
    internal static extern IntPtr RegistryGet(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string id
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_registry_summaries")]
    internal static extern IntPtr RegistrySummaries(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_registry_len")]
    internal static extern ulong RegistryLen(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_registry_is_empty")]
    internal static extern int RegistryIsEmpty(
        IntPtr handle
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_registry_sample_bytes")]
    internal static extern IntPtr RegistrySampleBytes(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string presetId,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string name
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_registry_extend_from_dir")]
    internal static extern ulong RegistryExtendFromDir(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string dir
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_paddle_ocr_config_with_cache_dir")]
    internal static extern IntPtr PaddleOcrConfigWithCacheDir(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string path
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_paddle_ocr_config_with_table_detection")]
    internal static extern IntPtr PaddleOcrConfigWithTableDetection(
        IntPtr handle,
        [MarshalAs(UnmanagedType.U1)] bool enable
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_paddle_ocr_config_with_angle_cls")]
    internal static extern IntPtr PaddleOcrConfigWithAngleCls(
        IntPtr handle,
        [MarshalAs(UnmanagedType.U1)] bool enable
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_paddle_ocr_config_with_det_db_thresh")]
    internal static extern IntPtr PaddleOcrConfigWithDetDbThresh(
        IntPtr handle,
        float threshold
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_paddle_ocr_config_with_det_db_box_thresh")]
    internal static extern IntPtr PaddleOcrConfigWithDetDbBoxThresh(
        IntPtr handle,
        float threshold
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_paddle_ocr_config_with_det_db_unclip_ratio")]
    internal static extern IntPtr PaddleOcrConfigWithDetDbUnclipRatio(
        IntPtr handle,
        float ratio
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_paddle_ocr_config_with_det_limit_side_len")]
    internal static extern IntPtr PaddleOcrConfigWithDetLimitSideLen(
        IntPtr handle,
        uint length
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_paddle_ocr_config_with_rec_batch_num")]
    internal static extern IntPtr PaddleOcrConfigWithRecBatchNum(
        IntPtr handle,
        uint batchSize
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_paddle_ocr_config_with_drop_score")]
    internal static extern IntPtr PaddleOcrConfigWithDropScore(
        IntPtr handle,
        float score
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_paddle_ocr_config_with_padding")]
    internal static extern IntPtr PaddleOcrConfigWithPadding(
        IntPtr handle,
        uint padding
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_paddle_ocr_config_with_model_tier")]
    internal static extern IntPtr PaddleOcrConfigWithModelTier(
        IntPtr handle,
        [MarshalAs(UnmanagedType.LPUTF8Str)] string tier
    );

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_paddle_ocr_config_default")]
    internal static extern IntPtr PaddleOcrConfigDefault();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_last_error_code")]
    internal static extern int LastErrorCode();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_last_error_context")]
    internal static extern IntPtr LastErrorContext();

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_free_string")]
    internal static extern void FreeString(IntPtr ptr);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_free_bytes")]
    internal static extern void FreeBytes(IntPtr ptr, UIntPtr len, UIntPtr cap);

    // Trait Bridge FFI

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_register_ocr_backend")]
    internal static extern int RegisterOcrBackend([MarshalAs(UnmanagedType.LPUTF8Str)] string name, IntPtr vtable, IntPtr userData, out IntPtr outError);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_unregister_ocr_backend")]
    internal static extern int UnregisterOcrBackend([MarshalAs(UnmanagedType.LPUTF8Str)] string name, out IntPtr outError);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_clear_ocr_backend")]
    internal static extern int ClearOcrBackend(out IntPtr outError);


    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_register_post_processor")]
    internal static extern int RegisterPostProcessor([MarshalAs(UnmanagedType.LPUTF8Str)] string name, IntPtr vtable, IntPtr userData, out IntPtr outError);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_unregister_post_processor")]
    internal static extern int UnregisterPostProcessor([MarshalAs(UnmanagedType.LPUTF8Str)] string name, out IntPtr outError);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_clear_post_processor")]
    internal static extern int ClearPostProcessor(out IntPtr outError);


    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_register_validator")]
    internal static extern int RegisterValidator([MarshalAs(UnmanagedType.LPUTF8Str)] string name, IntPtr vtable, IntPtr userData, out IntPtr outError);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_unregister_validator")]
    internal static extern int UnregisterValidator([MarshalAs(UnmanagedType.LPUTF8Str)] string name, out IntPtr outError);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_clear_validator")]
    internal static extern int ClearValidator(out IntPtr outError);


    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_register_embedding_backend")]
    internal static extern int RegisterEmbeddingBackend([MarshalAs(UnmanagedType.LPUTF8Str)] string name, IntPtr vtable, IntPtr userData, out IntPtr outError);

    [DllImport(LibName, CallingConvention = CallingConvention.Cdecl, EntryPoint = "xberg_unregister_embedding_backend")]
    internal static extern int UnregisterEmbeddingBackend([MarshalAs(UnmanagedType.LPUTF8Str)] string name, out IntPtr outError);
